5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1758_1577.log
== SUBMITION (2019-05-30 03:14:40) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)
d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
0.411652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:14:54) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)
d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
0.862455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:14:54) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)
d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.45237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:14:54) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)
d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.4843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:14:55) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)
d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.25459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:20) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
0.657958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.62242
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.90798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.74532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
2.04166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
1.85815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:15:23) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a*t**2)/2)+v0*t
print(d)
-- EXECUTION TIME:
0.405832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:13) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.574762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:14) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.54639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:14) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.38269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:15) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.11088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:15) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.24753
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:15) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.78517
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:19) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.2348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:19) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.87589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:20) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.74296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:21) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.89424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:21) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
3.45887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:21) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
3.53872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:24) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.45215
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.30629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.22064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.49062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.20632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:27) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.87062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:28) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.99949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:29) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.69128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:30) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.8731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:31) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.3681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:31) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.69029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:32) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.69381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:33) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.30545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:33) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.16446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:35) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.98803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:35) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.90238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:36) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.6977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:37) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.90656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:38) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.0159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:40) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.39208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:40) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
3.17876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:41) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.62611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:41) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.89592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:42) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
3.22121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:43) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.93977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:45) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.99175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:45) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.20039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:45) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.69184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:46) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.64933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:47) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.69735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:48) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.15408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:50) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.44043
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:50) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.8381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:50) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.59878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:51) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.14386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:52) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.42801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:52) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.613229
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1577/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:54) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.99613
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:55) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.20501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:55) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.29779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:55) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.11037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:56) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.19382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:56) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
2.71927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:16:56) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
1.60691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:07) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.477874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:08) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.533444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:11) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.518113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:13) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a* t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.329657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:19) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input())
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a * t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.341565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:49) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input("numero:"))
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a * t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.534505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:17:59) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input("numero:"))
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a * t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.347518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:18:01) 
-- CODE:
from numpy import*
a = float(input("aceleracao:"))
v0 = float(input("velocidade inicial:"))
n = int(input("numero:"))
t = arenge(n)


d = zeros(n, dtype = int)
d = ((a * t ** 2)/2)+ v0 * t
print(d)
-- EXECUTION TIME:
0.532106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 5, in <module>
    t = arenge(n)
NameError: name 'arenge' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
